--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "mocha --require ts-node/register test/**/*.ts",
     "start": "node ./dist/server.js",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc"
@@ -16,7 +17,13 @@
     "mongoose": "^5.4.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
-    "@types/mongoose": "^5.3.5"
+    "@types/mocha": "^5.2.5",
+    "@types/mongoose": "^5.3.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2"
   }
 }
